# chp-utils

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.ipynb  test.py
.github/ISSUE_TEMPLATE/: CODEOWNERS
chp_utils/: __init__.py  chp_utils  client.py  conflation.py  curie_database.py  exceptions.py  trapi_query_processor.py
chp_utils/generic/: __init__.py
chp_utils/meta_kg_validation/: meta_kg_validator.py
chp_utils/mixins/: sri_node_normalizer.py  sri_ontology_kp.py
chp_utils/mixins/client/: sri_node_normalizer.py  sri_ontology_kp.py
chp_utils/schemas/: meta-kg.json
chp_utils/semantic_operations/: semantic_processor.py
meta_kg/: meta_kg.py
unittests/: test_conflation.json  test_curies.json  test_meta_knowledge_graph.json  test_sri_node_normalizer.py  test_sri_ontology_kp.py  test_trapi_query_processor.py
unittests/json_responses/: test_conflate_categories_answers.json  test_expand_and_filter_with_meta_kg_answers.json  test_expand_batch_answers.json  test_expand_supported_ontological_descendants_answers.json  test_expand_with_semantic_ops_answers.json  test_get_curie_prefixes.json  test_get_normalized_nodes.json  test_get_ontology_descendents.json  test_get_semantic_types.json  test_normalization_workflow_answers.json  test_normalized_to_preferred_answers.json
unittests/query_samples/: standard_batch_onehop_queries.json
