[metadata]
name                                = chp-utils
version                             = attr: chp_utils.__version__.__version__
author                              = Luke Veenhuis
author_email                        = luke.j.veenhuis@dartmouth.edu
license                             = Apache-2.0
license_files                       = LICENSE
description                         = A set of tools for any chp app.
long_description                    = file: README.md
long_description_content_type       = text/markdown
url                                 = https://github.com/di2ag/chp_utils

[options]
packages                            = find:
zip_safe                            = False
python_requires                     = >=3.7
install_requires                    = file: requirements.txt

[options.package_data]
chp_utils.schemas                   = *.json

[options.extras_require]
dev                                 = file: requirements-dev.txt
trapi_model                         = file: trapi_model.txt